--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
     </div>
 </section>
-    <section class="range">
+    <section>
         <ul class="range-menu">
             <li class="range-menu__raspberry">
                 <h3 class="range-menu__state">Малинка даром!</h3>
